--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div class="scoreboard">
       <div class="high">High score: <span id="highScore">0</span></div>
       <div class="current">Current score: <span id="currentScore">0</span></div>
-      <div class="collisions">Collisions: <span>0</span></div>
+      <div class="collisions">Collisions: <span id="collisionNum">0</span></div>
     </div>
     <script src="d3.js" charset="utf-8"></script>
     <script src="watchout.js"></script>
